<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#fff" >
    <Button
        android:id="@+id/detailsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_yellow_shape"
        android:layout_margin="@dimen/dimens_5"
        android:text="@string/order_details"/>

    <Button
        android:id="@+id/directionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_yellow_shape"
        android:layout_margin="@dimen/dimens_5"
        android:text="@string/order_direction"/>

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_yellow_shape"
        android:layout_margin="@dimen/dimens_5"
        android:text="@string/order_delete"/>


</LinearLayout>