<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">
    <EditText
        android:id="@+id/mobileEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/mobile_text_hint"
        android:inputType="phone"
        />
    <EditText
        android:id="@+id/passEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobileEditText"
        android:layout_margin="20dp"
        android:hint="@string/pass_text_hint"
        android:inputType="textPassword"
         />
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/passEditText"
        android:text="@string/login__text_btn"
        android:background="@drawable/rounded_button_yellow_shape"
        android:textSize="20sp"
        android:gravity="center"/>
</RelativeLayout>
</RelativeLayout>