<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="10dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true"
    android:layout_margin="@dimen/dimens_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/orderImageView"
            android:layout_width="@dimen/dimens_60"
            android:layout_height="@dimen/dimens_60"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            app:riv_border_color="@color/colorAccent"
            app:riv_border_width="3dip"
            app:riv_corner_radius="30dp"
            app:riv_mutate_background="false"
            app:riv_oval="false"
            app:riv_tile_mode="clamp"
            android:layout_marginEnd="@dimen/dimens_10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/order_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/order_price"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/priceTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/order_quantity"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/quantityTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>